--- a/mongo.yml
+++ b/mongo.yml
@@ -7,7 +7,7 @@ services:
     ports:
       - 27021:27017/tcp
     volumes:
-      - /home/debian/volumes/mongodb/data:/data/db
-        #- /home/debian/volumes/mongodb/mongod.conf:/etc/mongod.conf
+      - /volumes/mongodb/data:/data/db
+        #- /volumes/mongodb/mongod.conf:/etc/mongod.conf
         #    command: [--auth]
 
