--- a/mysqlphpmyadmin.yml
+++ b/mysqlphpmyadmin.yml
@@ -7,7 +7,7 @@ services:
     #image: mysql:5.7
     container_name: mysql
     volumes:
-      - /home/debian/volumes/mysql:/var/lib/mysql
+      - /volumes/mysql:/var/lib/mysql
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: Miz@Blog
