--- a/jenkins.yml
+++ b/jenkins.yml
@@ -2,7 +2,7 @@ version: '3.3'
 services:
   jenkins:
     container_name: jenkins
-    image: jenkinsci/bluepcean
+    image: jenkinsci/blueocean
     restart: unless-stopped
     ports:
             - 8310:8080
@@ -11,4 +11,5 @@ services:
       - /volumes/jenkins/home:/var/jenkins_home
       - /volumes/jenkins/root:/root
       - /var/run/docker.sock:/var/run/docker.sock 
+    user: root
 
