--- a/elasticsearch.yml
+++ b/elasticsearch.yml
@@ -11,4 +11,4 @@ services:
       discovery.type: single-node
     volumes:
       - /volumes/elasticsearch:/var/lib/elasticsearch
-      - /volumes/elasticsearch/config/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml
+        #      - /volumes/elasticsearch/config/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml
