--- a/owncloud.yml
+++ b/owncloud.yml
@@ -2,7 +2,7 @@ version: '3.3'
 services:
   owncloud:
     container_name: owncloud
-    image: owncloud:8.1
+    image: owncloud:latest
     restart: unless-stopped
     ports:
             - 8313:80
