--- a/jenkins.yml
+++ b/jenkins.yml
@@ -11,5 +11,7 @@ services:
       - /volumes/jenkins/home:/var/jenkins_home
       - /volumes/jenkins/root:/root
       - /var/run/docker.sock:/var/run/docker.sock 
+    environment:
+      - httpsPort=3112
     user: root
 
