--- a/nexus.yml
+++ b/nexus.yml
@@ -5,4 +5,6 @@ services:
     image: sonatype/nexus3 
     restart: unless-stopped
     ports:
-            - 8317:8080
+            - 8317:8081
+    volumes:
+            - /volumes/nexus:/nexus-data
