--- a/nextcloud.yml
+++ b/nextcloud.yml
@@ -9,4 +9,11 @@ services:
     volumes:
             - /volumes/nextcloud/www:/var/www/html
             - /volumes/nextcloud/db:/var/lib/mysql
+              #    environment:
+              #      - POSTGRES_HOST=db
+              #      - POSTGRES_DB_FILE=/run/secrets/postgres_db
+              #      - POSTGRES_USER_FILE=/run/secrets/postgres_user
+              #      - POSTGRES_PASSWORD_FILE=/run/secrets/postgres_password
+              #      - NEXTCLOUD_ADMIN_PASSWORD_FILE=/run/secrets/nextcloud_admin_password
+              #      - NEXTCLOUD_ADMIN_USER_FILE=/run/secrets/nextcloud_admin_user
 
