--- a/mongo.yml
+++ b/mongo.yml
@@ -2,12 +2,12 @@ version: '3.3'
 services:
   mongodb:
     container_name: mongodb
-    image: mongo
+    image: mongo:6.0.2
     restart: unless-stopped
     ports:
-      - 27021:27017/tcp
+      - 27017:27017/tcp
     volumes:
-      - /volumes/mongodb/data:/data/db
+      - /volumes/mongodb/data:/data/db2
         #- /volumes/mongodb/mongod.conf:/etc/mongod.conf
         #    command: [--auth]
 
