--- a/mongo.yml
+++ b/mongo.yml
@@ -1,10 +1,20 @@
-version: '3.3'
+#version: '3.3'
 services:
   mongodb:
     container_name: mongodb
     image: mongo:6.0.2
     restart: unless-stopped
     ports:
-      - 27017:27017/tcp
+      - 27021:27017
     volumes:
       - /volumes/mongodb/data:/data/db
+    networks:
+      - mongodb_network
+networks:
+  mongodb_network:
+    driver: bridge
+    name: mongodb_network
+
+
+
+        
