--- a/n8n.yaml
+++ b/n8n.yaml
@@ -8,6 +8,7 @@ services:
     environment:
       - N8N_RUNNERS_ENABLED=true
       - N8N_ENFORCE_SETTINGS_FILE_PERMISSIONS=true
+      - N8N_COMMUNITY_PACKAGES_ALLOW_TOLL_USAGE=true
     restart: unless-stopped
 
 volumes:
