--- a/n8n.yaml
+++ b/n8n.yaml
@@ -5,6 +5,7 @@ services:
       - "5678:5678"
     volumes:
       - n8n_data:/home/node/.n8n
+      - /volumes/n8n_data/:/home/files
     environment:
       - N8N_RUNNERS_ENABLED=true
       - N8N_ENFORCE_SETTINGS_FILE_PERMISSIONS=true
